--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>分割返済シミュレーター</title>
+
+<link rel="apple-touch-icon" href="icon.png">
+<link rel="icon" type="image/png" href="icon.png">
 
 <style>
   body {
@@ -143,3 +147,4 @@ result.innerHTML =
 
 </body>
 </html>
+
